# Luna-lite

./: .clang-format  .clangd  .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md
LunaLite/: CMakeLists.txt
LunaLite/animation/: sprite_animation.cpp  sprite_animation.h  sprite_animator.cpp  sprite_animator.h
LunaLite/asset/: asset.h  asset_cache.cpp  asset_cache.h  asset_database.h  asset_importer.cpp  asset_importer.h  asset_importer_registry.cpp  asset_importer_registry.h  asset_loader_registry.cpp  asset_loader_registry.h  asset_manager.cpp  asset_manager.h  asset_metadata.h  asset_metadata_store.cpp  asset_metadata_store.h  asset_scanner.cpp  asset_scanner.h  asset_types.h  environment_map_baker.cpp  environment_map_baker.h  lunacube.cpp  lunacube.h  material_asset_importer.h  material_asset_loader.cpp  material_asset_loader.h  mesh_asset_importer.cpp  mesh_asset_importer.h  mesh_asset_loader.cpp  mesh_asset_loader.h  model_asset_importer.h  model_asset_loader.cpp  model_asset_loader.h  prefab.h  script_asset_importer.h  sprite.h
LunaLite/asset/builtin/: builtin_assets.h  material_factory.cpp  material_factory.h  mesh_factory.cpp  mesh_factory.h  model_factory.cpp  model_factory.h
LunaLite/asset/factory/: asset_factory.h  asset_factory_manager.cpp  asset_factory_manager.h  sprite_asset_factory.cpp  sprite_asset_factory.h
LunaLite/asset/importers/: material_asset_importer.cpp  material_asset_importer.h  mesh_asset_importer.cpp  mesh_asset_importer.h  model_asset_importer.cpp  model_asset_importer.h  prefab_asset_importer.cpp  prefab_asset_importer.h  scene_asset_importer.cpp  scene_asset_importer.h  script_asset_importer.cpp  script_asset_importer.h  sprite_animation_clip_importer.cpp  sprite_animation_clip_importer.h  sprite_animator_controller_importer.cpp  sprite_animator_controller_importer.h  sprite_asset_importer.cpp  sprite_asset_importer.h  texture_asset_importer.cpp  texture_asset_importer.h
LunaLite/asset/loaders/: material_asset_loader.cpp  material_asset_loader.h  mesh_asset_loader.cpp  mesh_asset_loader.h  model_asset_loader.cpp  model_asset_loader.h  prefab_asset_loader.cpp  prefab_asset_loader.h  sprite_animation_clip_loader.cpp  sprite_animation_clip_loader.h  sprite_animator_controller_loader.cpp  sprite_animator_controller_loader.h  sprite_asset_loader.cpp  sprite_asset_loader.h  texture_asset_loader.cpp  texture_asset_loader.h
LunaLite/asset/metadata/: asset_metadata_serializer.cpp  asset_metadata_serializer.h  asset_metadata_store.cpp  asset_metadata_store.h  asset_path_resolver.cpp  asset_path_resolver.h
LunaLite/core/: CMakeLists.txt  application.cpp  application.h  application_event.h  entry_point.cpp  event.h  input.cpp  input.h  key_codes.h  key_event.h  layer.h  layer_stack.cpp  layer_stack.h  log.cpp  log.h  mouse_codes.h  mouse_event.h  timestep.h  uuid.cpp  uuid.h  window.cpp  window.h
LunaLite/diagnostics/: stats.h
LunaLite/imgui/: imgui_platform.h  imgui_renderer.cpp  imgui_renderer.h
LunaLite/imgui/shaders/: imgui.frag  imgui.vert
LunaLite/modules/: default_engine_modules.cpp  default_engine_modules.h
LunaLite/platform/common/: file_dialogs.cpp  file_dialogs.h
LunaLite/platform/imgui/: glfw_imgui_platform.cpp  glfw_imgui_platform.h
LunaLite/platform/window/: glfw_window.cpp  glfw_window.h
LunaLite/platform/windows/: win_file_dialogs.cpp
LunaLite/project/: project_info.h  project_manager.cpp  project_manager.h
LunaLite/renderer/: CMakeLists.txt  debug_renderer.cpp  debug_renderer.h  renderer_controller.cpp  renderer_controller.h  renderer_registry.cpp  renderer_registry.h  rhi_frame_presenter.cpp  rhi_frame_presenter.h  rhi_upload_helpers.h
LunaLite/renderer/components/: renderer_component_registry.cpp  renderer_components.h
LunaLite/renderer/controller/: renderer_controller.cpp  renderer_controller.h
LunaLite/renderer/default_renderer/: environment_map_cache.cpp  gbuffer_resource.cpp  (+16 more)
LunaLite/rhi/: CMakeLists.txt  backend_factory.cpp  backend_factory.h
LunaLite/scene/: component_registry.cpp  component_registry.h  component_registry_adapters.h  components.h  entity.h  scene.cpp  scene.h  scene_component_registry.cpp  scene_component_registry.h  scene_components.h  scene_renderer.cpp  scene_renderer.h  scene_serializer.cpp  scene_serializer.h  sprite_animation_system.cpp  sprite_animation_system.h
LunaLite/script/: entity_api.cpp  entity_api.h  lua_script_runtime.cpp  lua_script_runtime.h  script_component_registry.cpp  script_component_registry.h  script_components.h  script_runtime.cpp  script_runtime.h
editor/: CMakeLists.txt  application.cpp  component_inspector_widgets.cpp  component_inspector_widgets.h  content_browser_panel.cpp  content_browser_panel.h  drag_drop.cpp  drag_drop.h  editor_actions.cpp  editor_actions.h  editor_camera.cpp  editor_camera.h  editor_component_inspectors.cpp  editor_component_inspectors.h  editor_layer.cpp  editor_layer.h  editor_scene_metadata.cpp  editor_scene_metadata.h  hierarchy_panel.cpp  hierarchy_panel.h  inspector_panel.cpp  inspector_panel.h  modal_dialog.cpp  modal_dialog.h
editor/panels/: animation_builder_panel.cpp  animation_builder_panel.h  content_browser_panel.cpp  content_browser_panel.h  debug_panel.cpp  debug_panel.h  editor_setting_panel.cpp  editor_setting_panel.h  hierarchy_panel.cpp  hierarchy_panel.h  inspector_panel.cpp  inspector_panel.h  material_editor_panel.cpp  material_editor_panel.h  project_settings_panel.cpp  project_settings_panel.h  render_stats_panel.cpp  render_stats_panel.h  scene_panel.cpp  scene_panel.h
tests/: CMakeLists.txt  asset_manager_test.cpp  command_history_test.cpp  debug_renderer_test.cpp  frustum_test.cpp  lunacube_test.cpp  mesh_bounds_test.cpp  path_tracing_renderer_test.cpp  project_commands_test.cpp  renderer_registry_test.cpp  scene_commands_test.cpp  scene_edit_transaction_test.cpp  scene_serializer_test.cpp  script_runtime_test.cpp  selection_context_test.cpp  soft_rasterization_renderer_test.cpp  sprite_animation_system_test.cpp  sprite_culling_test.cpp  tooling_command_test.cpp
(+255 files in other folders)
