add_executable(LunaLiteEditor
    application.cpp
    editor_camera.cpp
    editor_actions.cpp
    editor_layer.cpp
    editor_scene_metadata.cpp
    panels/content_browser_panel.cpp
    panels/debug_panel.cpp
    panels/editor_setting_panel.cpp
    panels/hierarchy_panel.cpp
    panels/inspector_panel.cpp
    panels/material_editor_panel.cpp
    panels/render_stats_panel.cpp
    panels/scene_panel.cpp
)

target_link_libraries(LunaLiteEditor
    PRIVATE
        LunaLite
        LunaLiteTooling
)
